<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.reset.ResetPasswordFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/reset_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Reset Password" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reset_email_layout"
            style="@style/Widget.Material3.TextInputEditText.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:paddingStart="0dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_toolbar"
            app:layout_constraintVertical_bias="0.06"
            app:placeholderText="@string/your_email"
            app:placeholderTextColor="@color/text_50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                tools:text="savo123@gmail.com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorPrimaryVariant"
            android:text="@string/continue_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/reset_email_layout"
            app:layout_constraintStart_toStartOf="@id/reset_email_layout" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:indeterminateDrawable="@drawable/progress_bar_blue"
            android:indeterminateDuration="@android:integer/config_longAnimTime"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/reset_email_layout"
            app:layout_constraintStart_toStartOf="@id/reset_email_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>