<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg_radius">

        <LinearLayout
            android:id="@+id/filter_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/filter_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:padding="4dp"
                    android:text="@string/reset_filter"
                    android:textColor="@color/colorPrimaryVariant"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@id/filter_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/filter_header"
                    tools:ignore="ContentDescription" />

                <View
                    android:id="@+id/filter_drag"
                    android:layout_width="50dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/text_35"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/filter_close"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="16dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="@id/filter_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/filter_header"
                    app:tint="@color/colorPrimaryVariant"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/filter_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/categories"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filter_drag" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingHorizontal="16dp">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filter_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="16dp"
                    android:nestedScrollingEnabled="true"
                    android:paddingBottom="16dp"
                    app:chipSpacingHorizontal="4dp"
                    app:chipSpacingVertical="4dp" />

            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_secondary_8"
                android:paddingHorizontal="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filter_submit"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryVariant"
                    android:text="@string/filter"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:background="@color/colorPrimaryVariant" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

